--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+v1.8 - 08-06-2015 - Pierre Van Glabeke
+* ajout lien vers toutes les archives
+
 v1.7 - 28-05-2015 - Kozlika & Nikrou
 * suppression d'image et gestion de l'indicateur via css
 * ajout de classes sur chaque liste (année/mois)
