--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+v1.8.1 - 29-06-2015 - Pierre Van Glabeke
+* correction validation html
+
 v1.8 - 08-06-2015 - Pierre Van Glabeke
 * ajout lien vers toutes les archives
 
